3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/skills.c: correctly copy spell's path_repelled field when inscribing a
 scroll, so casting from said scroll works with MOVING_BALL.
Nicolas Weeger 2007-06-18

server/login.c: Fix crash at login if player is set to rejoin party, and that
party does not exist - shouldn't try to use partyname from null structure.
MSW 2007-06-17

Fix bug #1735464: Reset command does not accept relative names.
 server/c_wiz.c
Nicolas Weeger 2007-06-16

Partial fix for #1735275: Server sends incorrect spell info data.
 server/login.c: send spell before calling fix_player() which updates spells.
Nicolas Weeger 2007-06-10

Tentative fix for #1735272: Server sends invalid item tags
 server/plugins.c: don't send invisible objects, they're never sent to the client.
Nicolas Weeger 2007-06-10

Fix bug #1729829: Server using access to check for file existance.
Also remove obsolete old player directory mode support.
 server/login.c
Nicolas Weeger 2007-06-09

Fix bug #1730874: +dam on bracers not working.
 common/living.c: bracers can give damage too.
Nicolas Weeger 2007-06-09

common/utils.c: don't try to decay a non head object, this leads to abort() from remove_ob().
Nicolas Weeger 2007-06-04

Add Crossfire.Object.Skill property.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 plugins/common/plugin_common.c: fix a crash when a NULL value.
Nicolas Weeger 2007-06-04

 common/living.c: don't ignore exp gained in a skill you don't know yet.
Nicolas Weeger 2007-06-04

Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
 server/skills.c
Nicolas Weeger 2007-06-03
